--- a/App/src/main/resources/templates/fragments/jquery_header.html
+++ b/App/src/main/resources/templates/fragments/jquery_header.html
@@ -19,6 +19,7 @@
 
 
 <script th:src="@{/js/jquery-3.6.1.min.js}"></script>
+<script th:src="@{/js/detectSmartphone.js}"></script>
 <script th:src="@{/js/dashboard.js}"></script>
 
 
