--- a/App/src/main/resources/templates/fragments/manage_expanse_header.html
+++ b/App/src/main/resources/templates/fragments/manage_expanse_header.html
@@ -23,6 +23,7 @@
 <link  th:href="@{/css/manage_expanse.css}" rel="stylesheet" />		
 
 <script th:src="@{/js/jquery-3.6.1.min.js}"></script>
+<script th:src="@{/js/detectSmartphone.js}"></script>
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 <script th:src="@{/js/feather.min.js}"></script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
