--- a/App/src/main/resources/templates/fragments/manage_worksheet_header.html
+++ b/App/src/main/resources/templates/fragments/manage_worksheet_header.html
@@ -20,6 +20,7 @@
 <link  th:href="@{/css/features_navigation.css}" rel="stylesheet" />
 
 <script th:src="@{/js/jquery-3.6.1.min.js}"></script>
+<script th:src="@{/js/detectSmartphone.js}"></script>
 <script th:src="@{/js/manage_worksheet.js}"></script>
 
 
